cargo-features = ["profile-rustflags"]
[package]
name = "giuroll"
authors = ["Giufin"]
license = "MIT"
version = "0.6.17-1-hagb-unofficial"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
logtofile = ["dep:fern", "dep:humantime", "dep:log"]
allocconsole = []
f62 = []
logrollback = []
lowframetest = ["dep:rand"]
fillfree = ["dep:rand"]
cn = []

[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_System_Memory",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_LibraryLoader"
]

[dependencies]
ilhook = { path = "ilhookmod" }
mininip = { path = "mininip" }                              #"1.3.1"
winapi = { version = "0.3.9", features = ["d3d9"] }

fern = { version = "0.6.2", optional = true }
humantime = { version = "2.1.0", optional = true }
log = { version = "0.4.17", optional = true }
rand =  { version = "0.8.5", optional = true }

[profile.release]
strip = true
#rustflags = ["-C", "target-feature=+crt-static"]

[package.metadata.winres]
OriginalFilename = "giuroll.dll"

[build-dependencies]
winres = "0.1"
