[package]
name = "injector"
authors = ["Giufin"]
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dll-syringe = "0.15.2"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"